unpackaged/main/default/objects/Revenue__c/fields/Sage_Detail__c.field-meta.xml
<CustomField>
    <fullName>Sage_Detail__c</fullName>
    <label>Sage Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>