unpackaged/main/default/objects/Revenue__c/fields/Sage_Source__c.field-meta.xml
<CustomField>
    <fullName>Sage_Source__c</fullName>
    <label>Sage Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>