unpackaged/main/default/objects/Revenue__c/fields/Sage_Source_Ref__c.field-meta.xml
<CustomField>
    <fullName>Sage_Source_Ref__c</fullName>
    <label>Sage Source Ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>