unpackaged/main/default/objects/Revenue__c/fields/Sage_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Sage_Transaction_Number__c</fullName>
    <label>Sage Transaction Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>