unpackaged/main/default/objects/Revenue__c/fields/Sage_Type__c.field-meta.xml
<CustomField>
    <fullName>Sage_Type__c</fullName>
    <label>Sage Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>