unpackaged/main/default/objects/Revenue__c/fields/Scenario_1__c.field-meta.xml
<CustomField>
    <fullName>Scenario_1__c</fullName>
    <formula>IF(  BusinessType__c ="New,Renewal",      MAR_P_L__c ,


IF(  CV_TYPE__c = "YES",0,
IF(  CV_TYPE__c = "NO",    FEB_P_L__c  ,
IF(  CV_TYPE__c = "50%",    FEB_P_L__c *0.50,


    MAR_P_L__c   ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scenario 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>