unpackaged/main/default/objects/Revenue__c/fields/SepMarginCY__c.field-meta.xml
<CustomField>
    <fullName>SepMarginCY__c</fullName>
    <formula>IF( DATE( YEAR( TODAY() ) ,09,01) &gt;=  ContractStartDate__c &amp;&amp; DATE( YEAR( TODAY() ) ,09,01) &lt;=  ContractEndDate__c ,  (T_Margin__c / Contract_Months__c) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sep Margin (Current Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>