unpackaged/main/default/objects/Revenue__c/fields/Shipping_Address_RR__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_RR__c</fullName>
    <formula>Invoice__r.ShippingAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address RR</label>
    <type>Text</type>
</CustomField>