unpackaged/main/default/objects/Revenue__c/fields/Sold_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Name__c</fullName>
    <label>Sold To Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>