unpackaged/main/default/objects/Revenue__c/fields/StaffNameAuto__c.field-meta.xml
<CustomField>
    <fullName>StaffNameAuto__c</fullName>
    <formula>Grouping__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Name</label>
    <type>Text</type>
</CustomField>