unpackaged/main/default/objects/Revenue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoiced</fullName>
                <default>true</default>
                <label>Invoiced</label>
            </value>
            <value>
                <fullName>Statement Sent</fullName>
            </value>
            <value>
                <fullName>On Direct Debit</fullName>
            </value>
            <value>
                <fullName>Promise to Pay Date Provided</fullName>
            </value>
            <value>
                <fullName>Invoice in Query with Sales Exec -Awaiting Response</fullName>
            </value>
            <value>
                <fullName>CCJ Sent</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>On FInance</fullName>
            </value>
            <value>
                <fullName>Credited in Full</fullName>
            </value>
            <value>
                <fullName>Multiple line Rev Rec</fullName>
            </value>
            <value>
                <fullName>Internal Invoice</fullName>
            </value>
            <value>
                <fullName>BIMObject Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>