unpackaged/main/default/objects/Revenue__c/fields/Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Sub_Division__c</fullName>
    <label>Sub Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BIM</fullName>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Rolls Royce</fullName>
            </value>
            <value>
                <fullName>NIssan</fullName>
            </value>
            <value>
                <fullName>Translation</fullName>
            </value>
            <value>
                <fullName>Autodesk Services</fullName>
            </value>
            <value>
                <fullName>Dassault Services</fullName>
            </value>
            <value>
                <fullName>JLR iPLM Services</fullName>
            </value>
            <value>
                <fullName>JLR</fullName>
            </value>
            <value>
                <fullName>MFG</fullName>
            </value>
            <value>
                <fullName>IDV</fullName>
            </value>
            <value>
                <fullName>Elysium</fullName>
            </value>
            <value>
                <fullName>JCB</fullName>
            </value>
            <value>
                <fullName>JLR 53949</fullName>
            </value>
            <value>
                <fullName>Consultants</fullName>
            </value>
            <value>
                <fullName>eAPQ &amp; D3M</fullName>
                <label>GSI Projects</label>
            </value>
            <value>
                <fullName>JLR Online Training</fullName>
            </value>
            <value>
                <fullName>JLR Software</fullName>
            </value>
            <value>
                <fullName>Subscriptions</fullName>
                <label>JLR Subscriptions</label>
            </value>
            <value>
                <fullName>Subscriptions Renewal</fullName>
                <label>JLR Subscriptions Renewal</label>
            </value>
            <value>
                <fullName>JLR Admin %</fullName>
                <label>JLR Supplier Training</label>
            </value>
            <value>
                <fullName>GSI Core Contract</fullName>
            </value>
            <value>
                <fullName>MX - EH</fullName>
            </value>
            <value>
                <fullName>enerjyhub Projects</fullName>
            </value>
            <value>
                <fullName>NHS</fullName>
            </value>
            <value>
                <fullName>Nissan Subscriptions</fullName>
            </value>
            <value>
                <fullName>Nissan Subscription Renewal</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>