unpackaged/main/default/objects/Revenue__c/fields/Supplier_Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Due_Date__c</fullName>
    <label>Supplier Invoice Due Date</label>
    <type>Date</type>
</CustomField>