unpackaged/main/default/objects/Revenue__c/fields/Supplier_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Number__c</fullName>
    <label>Supplier Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>