unpackaged/main/default/objects/Revenue__c/fields/Supplier_Status_RR__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Status_RR__c</fullName>
    <formula>Opportunity__r.Supplier_Order_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Status RR</label>
    <type>Checkbox</type>
</CustomField>