unpackaged/main/default/objects/Revenue__c/fields/T2__c.field-meta.xml
<CustomField>
    <fullName>T2__c</fullName>
    <formula>TEXT( Opportunity__r.SolutionType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>