unpackaged/main/default/objects/Revenue__c/fields/T_Margin__c.field-meta.xml
<CustomField>
    <fullName>T_Margin__c</fullName>
    <label>T Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>