unpackaged/main/default/objects/Revenue__c/fields/Target_Variance__c.field-meta.xml
<CustomField>
    <fullName>Target_Variance__c</fullName>
    <formula>T_Margin__c - Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>