unpackaged/main/default/objects/Revenue__c/fields/Team_Member_Initial_Link__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Initial_Link__c</fullName>
    <formula>Grouping__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Member Initial Link</label>
    <type>Text</type>
</CustomField>