unpackaged/main/default/objects/Revenue__c/fields/TEST_SA__c.field-meta.xml
<CustomField>
    <fullName>TEST_SA__c</fullName>
    <formula>IF( Grouping__r.Name ="James Gregory",500,

Grouping__r.Monthly_Car_Allowance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST SA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>