unpackaged/main/default/objects/Revenue__c/fields/TotalAmountTrig__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountTrig__c</fullName>
    <label>TotalAmountTrig</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>