unpackaged/main/default/objects/Revenue__c/fields/Type_ALC_YLC_QLC__c.field-meta.xml
<CustomField>
    <fullName>Type_ALC_YLC_QLC__c</fullName>
    <formula>TEXT( Opportunity__r.DS_Revenue_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type ALC YLC QLC</label>
    <type>Text</type>
</CustomField>