unpackaged/main/default/objects/Revenue__c/fields/VATAmountTrig__c.field-meta.xml
<CustomField>
    <fullName>VATAmountTrig__c</fullName>
    <label>VATAmountTrig</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>