unpackaged/main/default/objects/Revenue__c/fields/Year_of_First_Order__c.field-meta.xml
<CustomField>
    <fullName>Year_of_First_Order__c</fullName>
    <formula>Opportunity__r.First_Order_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year of First Order</label>
    <type>Text</type>
</CustomField>