unpackaged/main/default/objects/Revenue__c/listViews/Chloe_Rev_Rec_Monthly_Check.listView-meta.xml
<ListView>
    <fullName>Chloe_Rev_Rec_Monthly_Check</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Sub_Division__c</columns>
    <columns>Opportunity__c</columns>
    <columns>ProductType__c</columns>
    <columns>T_Margin__c</columns>
    <columns>GrossMargin__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Grouping__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>ProductFamily__c</columns>
    <columns>Grouping_Set__c</columns>
    <columns>BusinessType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BusinessType__c</field>
        <operation>notEqual</operation>
        <value>Transaction Cost</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>SOL</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>greaterThan</operation>
        <value>8/31/2020</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>lessThan</operation>
        <value>10/1/2020</value>
    </filters>
    <filters>
        <field>ProductFamily__c</field>
        <operation>equals</operation>
        <value>Autodesk,Construction</value>
    </filters>
    <label>Chloe Rev Rec Monthly Check</label>
</ListView>