unpackaged/main/default/objects/Revenue__c/listViews/Consultants_Check_for_A_Hill_Month_End.listView-meta.xml
<ListView>
    <fullName>Consultants_Check_for_A_Hill_Month_End</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Sub_Division__c</columns>
    <columns>Opportunity__c</columns>
    <columns>ProductType__c</columns>
    <columns>T_Margin__c</columns>
    <columns>GrossMargin__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Grouping__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>ProductFamily__c</columns>
    <columns>Grouping_Set__c</columns>
    <columns>BusinessType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BusinessType__c</field>
        <operation>notEqual</operation>
        <value>Transaction Cost</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>SOL</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>greaterThan</operation>
        <value>2/28/2022</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>lessThan</operation>
        <value>4/1/2022</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Alison Hill</value>
    </filters>
    <label>Consultants Check for A Hill Month End</label>
</ListView>