unpackaged/main/default/objects/Revenue__c/listViews/Copy_of_T_Margin_Checking_Alison_Hill.listView-meta.xml
<ListView>
    <fullName>Copy_of_T_Margin_Checking_Alison_Hill</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>ProductType__c</columns>
    <columns>T_Margin__c</columns>
    <columns>GrossMargin__c</columns>
    <columns>Grouping__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>PNL_Completed__c</columns>
    <columns>ProductFamily__c</columns>
    <columns>Grouping_Set__c</columns>
    <columns>BusinessType__c</columns>
    <columns>Sub_Division__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>lessOrEqual</operation>
        <value>3/31/2022</value>
    </filters>
    <filters>
        <field>BusinessType__c</field>
        <operation>notEqual</operation>
        <value>Transaction Cost</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>SOL</value>
    </filters>
    <filters>
        <field>Date2__c</field>
        <operation>greaterThan</operation>
        <value>2/28/2022</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Alison Hill</value>
    </filters>
    <label>Copy of T Margin Checking Alison Hill</label>
</ListView>