unpackaged/main/default/objects/Revenue__c/listViews/Copy_of_T_Margin_Checking_Donna_Callan.listView-meta.xml
<ListView>
    <fullName>Copy_of_T_Margin_Checking_Donna_Callan</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>ProductType__c</columns>
    <columns>T_Margin__c</columns>
    <columns>GrossMargin__c</columns>
    <columns>Grouping__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>PNL_Completed__c</columns>
    <columns>ProductFamily__c</columns>
    <columns>Grouping_Set__c</columns>
    <columns>BusinessType__c</columns>
    <columns>Sub_Division__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>lessOrEqual</operation>
        <value>9/1/2021</value>
    </filters>
    <filters>
        <field>BusinessType__c</field>
        <operation>notEqual</operation>
        <value>Transaction Cost</value>
    </filters>
    <filters>
        <field>Date2__c</field>
        <operation>greaterThan</operation>
        <value>8/31/2021</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Kathryn Youdan</value>
    </filters>
    <label>Copy of T Margin Checking Kathryn Youdan</label>
</ListView>