unpackaged/main/default/objects/Revenue__c/listViews/Expleo_Rev_Rec.listView-meta.xml
<ListView>
    <fullName>Expleo_Rev_Rec</fullName>
    <columns>AccountName2__c</columns>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Expected_Payment_Date__c</columns>
    <columns>Billing_Frequency__c</columns>
    <columns>Status__c</columns>
    <columns>Promised_For_Payment_Date__c</columns>
    <columns>Account_Debtor_Category__c</columns>
    <columns>Customer_Querying_Invoice__c</columns>
    <columns>Credit_Control_Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountName2__c</field>
        <operation>contains</operation>
        <value>Expleo</value>
    </filters>
    <label>Expleo Rev Rec</label>
    <sharedTo>
        <role>Accounts</role>
    </sharedTo>
</ListView>