unpackaged/main/default/objects/Revenue__c/listViews/T_Margin_Checking_Jemma_Hunter.listView-meta.xml
<ListView>
    <fullName>T_Margin_Checking_Jemma_Hunter</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>T_Margin__c</columns>
    <columns>GrossMargin__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Grouping__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>PNL_Completed__c</columns>
    <columns>Date__c</columns>
    <columns>ProductFamily__c</columns>
    <columns>Grouping_Set__c</columns>
    <columns>BusinessType__c</columns>
    <columns>Sub_Division__c</columns>
    <columns>Department__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>greaterThan</operation>
        <value>3/31/2022</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Jemma Hunter</value>
    </filters>
    <filters>
        <field>BusinessType__c</field>
        <operation>notEqual</operation>
        <value>Transaction Cost</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>lessThan</operation>
        <value>5/1/2022</value>
    </filters>
    <label>T Margin Checking Jemma Hunter</label>
</ListView>