unpackaged/main/default/objects/Revenue__c/listViews/T_Margin_Checking_Tereasa_Wilkinson.listView-meta.xml
<ListView>
    <fullName>T_Margin_Checking_Tereasa_Wilkinson</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>ProductType__c</columns>
    <columns>T_Margin__c</columns>
    <columns>GrossMargin__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>ProductFamily__c</columns>
    <columns>Grouping_Set__c</columns>
    <columns>BusinessType__c</columns>
    <columns>Sub_Division__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/1/2021</value>
    </filters>
    <filters>
        <field>BusinessType__c</field>
        <operation>notEqual</operation>
        <value>Transaction Cost</value>
    </filters>
    <filters>
        <field>Date2__c</field>
        <operation>greaterThan</operation>
        <value>10/31/2021</value>
    </filters>
    <filters>
        <field>ProductFamily__c</field>
        <operation>equals</operation>
        <value>enerjyhub,dassault</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Tereasa Wilkinson</value>
    </filters>
    <label>T Margin Checking Tereasa Wilkinson</label>
    <sharedTo>
        <group>AccountsTeam</group>
        <group>Dassault_Admin_Accounts</group>
        <group>SalesSupportTeam</group>
    </sharedTo>
</ListView>