unpackaged/main/default/objects/Revenue__c/listViews/T_Margin_Checking_Tereasa_Wilkinson_3.listView-meta.xml
<ListView>
    <fullName>T_Margin_Checking_Tereasa_Wilkinson_3</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>Date__c</columns>
    <columns>Sub_Division__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>ProductType__c</columns>
    <columns>T_Margin__c</columns>
    <columns>GrossMargin__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Grouping__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ProductFamily__c</columns>
    <columns>Grouping_Set__c</columns>
    <columns>BusinessType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BusinessType__c</field>
        <operation>notEqual</operation>
        <value>Transaction Cost</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>SOL,ENE</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2021</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>lessThan</operation>
        <value>2/1/2022</value>
    </filters>
    <filters>
        <field>ProductFamily__c</field>
        <operation>notEqual</operation>
        <value>enerjyhub</value>
    </filters>
    <label>T Margin Checking Tereasa Wilkinson 3</label>
</ListView>